@@ -1,3 +1,9 @@
+2004-11-02  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* java/awt/Font.java (name): New field.
+	(size): Likewise.
+	(style): Likewise.
+
 2004-11-01  Jerry Quinn  <jlquinn@optonline.net>
 
 	* java/awt/image/Raster.java (createBandedRaster): Implement.
